# advent-of-code

./: .gitignore  README.md
.github/workflows/: 2020.yml  2021.yml  2022.yml
2020/: .tool-versions  day01.zig  day02.zig  day03.zig  day04.zig  day05.zig  day06.zig  day07.zig  day08.zig  day09.zig  day10.zig  day11.zig  day12.zig  day13.zig  day14.zig  day15.zig  day16.zig  day17.zig  day18.zig  day19.zig  day20.zig  day21.zig  day22.zig  day23.zig  day24.zig  day25.zig
2020/inputs/: day07.txt  day19.txt  test_day18.txt
2020/src/: day01.zig  day02.zig  day03.zig  day04.zig  day05.zig  day06.zig  day07.zig  day08.zig  day09.zig  day10.zig  day11.zig  day12.zig  day13.zig  day14.zig  day15.zig  day16.zig  day17.zig  day18.zig  day19.zig  day20.zig  day21.zig  day22.zig  day23.zig  day24.zig  day25.zig
2021/: Cargo.toml  Justfile  rust-toolchain.toml
2021/inputs/: day17.txt  day22.txt  test_day17.txt  test_day22.txt  test_day22_2.txt
2021/src/: main.rs
2021/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
2021/src/helpers/: digits.rs  increment.rs  mod.rs
2022/: Cargo.toml
2022/inputs/: day16.txt  day22.txt  test_day16.txt
2022/src/: main.rs
2022/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  (+6 more)
