[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
rayon = "1.6.0"
regex = "1.7.0"
serde_scan = "0.4.1"

[profile.dev.package."*"]
opt-level = 3
